test/libsolidity/syntaxTests/parsing/wrong_compiler_2.sol
pragma solidity ^99.99.0;
this is surely invalid
// ----
// ParserError 5333: (0-25): Source file requires different compiler version (current compiler is ....
